# uconf

./: .gitignore  AGENTS.md  AUTHORS  CITATION.cff  CLAUDE.md  README.md  benchmark.py  environment.yml  homology.py  homology_repr.py  pyproject.toml  pytest.ini  requirements.txt  ruff.toml
.github/: dependabot.yml
.github/workflows/: copilot-setup-steps.yml  docs.yml  lint.yml  release.yml
calculs/: pytest.ini  test.py  test_bar_cobar.py  test_barratt_eccles.py  test_comch_compatibility.py  test_common_cooperad.py  test_common_operad.py  test_lie.py  test_notebook_ported.py  test_shifted_cooperad.py  test_shifted_operad.py  test_simplicial.py  test_stress_operads.py  test_surjection.py  test_surjection_cooperad.py
calculs/uconf/: __init__.py  bar_construction.py  barratt_eccles.py  hadamard_operad.py  lie.py  operad.py  shifted_cooperad.py  shifted_operad.py  simplicial.py  surjection.py  surjection_linear_dual.py
comch/: common_functions.py  requirements.txt
docs/: conf.py  getting-started.md  index.md  optimizations.md  package-guide.md  tree-redesign.md
docs/_templates/autosummary/: module.rst
docs/api/: algebraic.rst  constructions.rst  core.rst  homology.rst  index.rst  models.rst  morphisms.rst  sampling.rst  uconf.rst  wrappers.rst
src/uconf/: __init__.py  homology.py  sampling.py  tikz.py
src/uconf/algebraic/: __init__.py  _util.py  algebra.py  coalgebra.py  cofree_coalgebra.py  conf.py  configuration.py  free_algebra.py  hadamard_algebra.py  pullback_algebra.py  simplicial.py  spherical.py  torus.py  torus_configuration.py  torus_simplicial.py  tree_module.py
src/uconf/constructions/: __init__.py  bar_algebra.py  bar_construction.py  cobar_coalgebra.py  cobar_construction.py
src/uconf/core/: component.py  cooperad.py  display.py  morphism.py  parented_element.py  (+4 more)
tests/: planarize_helpers.py  test_algebra_coalgebra.py  test_associative.py  test_bar_cobar.py  test_bar_cobar_algebra.py  test_barratt_eccles.py  test_basis_it.py  test_basis_iter.py  test_comch_compatibility.py  test_commutative.py  test_configuration_model.py  test_free_cofree.py  test_hadamard_algebra.py  test_hadamard_operad.py  test_homology.py  test_lie.py  test_morphisms.py  test_protocols.py  test_quasi_planar.py  test_repr_models.py  test_sampling.py  test_shifted_cooperad.py  test_shifted_operad.py  test_simplicial.py  test_spherical.py  test_spherical_surjection_algebra.py  test_surjection.py  test_surjection_cooperad.py  test_systematic_axioms.py  test_tikz.py  test_torus_configuration.py  test_torus_simplicial.py  test_twisting.py
uconf/: __init__.py  algebra.py  algebra_bar.py  bar.py  bar_construction.py  barratt_eccles.py  coalgebra.py  coalgebra_cobar.py  coassociative.py  cobar_construction.py  cocommutative.py  cofree_coalgebra.py  commutative.py  cooperad.py  free_algebra.py  hadamard_operad.py  homology.py  operad.py  operads.py  shifted_cooperad.py  shifted_operad.py  signs.py  simplicial.py  surjection.py  surjection_dual.py  test.py  trees.py  uconf.py
uconf/algebraic/: __init__.py  algebra.py  coalgebra.py  cofree_coalgebra.py  conf.py  free_algebra.py  hadamard_algebra.py  pullback_algebra.py  simplicial.py  spherical.py  tree_module.py
uconf/constructions/: __init__.py  algebra_bar.py  bar_algebra.py  bar_construction.py  coalgebra_cobar.py  cobar_coalgebra.py  cobar_construction.py  comodule.py  e_comodule.py  twisted_bar_algebra.py  twisted_complex.py  twisted_complex_old.py
uconf/core/: __init__.py  component.py  cooperad.py  morphism.py  operad.py  parented_element.py  quasi_planar.py  signs.py  trees.py  twisting.py  vertex_decorated.py  vertex_decoration.py
uconf/models/: __init__.py  associative.py  barratt_eccles.py  coassociative.py  cocommutative.py  commutative.py  lie.py  simplicial.py  surjection.py  surjection_dual.py
uconf/morphisms/: __init__.py  canonical_twisting.py  e_comodule_morphism.py
uconf/wrappers/: __init__.py  hadamard_operad.py  shifted_cooperad.py  shifted_operad.py
(+19 files in other folders)
