[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "uconf"
version = "1.0.0"
authors = [{ name = "Najib Idrissi" }, { name = "Victor Roca i Lucio" }]
readme = "README.md"
license = "GPL-3.0-or-later"

[project.optional-dependencies]
dev = [
    "comch==0.1.5",
    "pytest==9.1.1",
    "pytest-cov==7.1.0",
    "pytest-xdist==3.8.0",
    "ruff==0.15.20",
]
docs = ["myst-parser==5.1.0", "Sphinx==9.1.0"]

[tool.pytest.ini_options]
addopts = "-q -rxXs"
python_files = "tests/test_*.py"
python_functions = "test_*"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
ignore = ["E741"]
