[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "uconf"
version = "1.0.1"
authors = [{ name = "Najib Idrissi" }, { name = "Victor Roca i Lucio" }]
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.12"

[dependency-groups]
dev = [
    "comch==0.1.5",
    "pytest==9.1.1",
    "pytest-cov==7.1.0",
    "pytest-xdist==3.8.0",
    "ruff==0.15.20",
]
docs = ["myst-parser==5.1.0", "Sphinx==9.1.0"]

[tool.uv]
# SageMath is provided by the system (or conda) interpreter, not by uv. Prefer a
# system Python so `uv venv --system-site-packages` builds on the interpreter
# that actually has Sage, instead of a uv-managed download. Override per-invocation
# with `uv venv --python <path>` if Sage lives on a non-default interpreter.
python-preference = "system"

[tool.pytest.ini_options]
addopts = "-q -rxXs"
python_files = "tests/test_*.py"
python_functions = "test_*"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
ignore = ["E741"]
