[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "uconf-operads"
version = "1.0.3"
description = "Combinatorial operad/cooperad models for algebraic topology and configuration spaces"
authors = [
    { name = "Najib Idrissi", email = "najib.idrissi-kaitouni@u-pariscite.fr" },
    { name = "Victor Roca i Lucio", email = "rocalucio@imj-prg.fr" },
]
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.12"
dependencies = ["sagemath>=10.9"]
keywords = [
    "algebraic topology",
    "configuration spaces",
    "cooperads",
    "operads",
    "SageMath",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
]

[project.urls]
Homepage = "https://nidrissi.github.io/uconf/"
Documentation = "https://nidrissi.github.io/uconf/"
Repository = "https://github.com/nidrissi/uconf"
Issues = "https://github.com/nidrissi/uconf/issues"
DOI = "https://doi.org/10.5281/zenodo.20843321"

[tool.hatch.build.targets.wheel]
packages = ["src/uconf"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/docs",
    "/AUTHORS",
    "/CITATION.cff",
    "/environment.yml",
    "/LICENSE.md",
    "/pyproject.toml",
    "/README.md",
]
exclude = [
    "/docs/_build",
]

[dependency-groups]
dev = [
    "comch==0.1.5",
    "pytest==9.1.1",
    "pytest-cov==7.1.0",
    "pytest-xdist==3.8.0",
    "ruff==0.15.22",
]
docs = ["myst-parser==5.1.0", "Sphinx==9.1.0"]

[tool.uv]
# Although SageMath is declared as a runtime dependency, local development uses
# the system or conda installation instead of rebuilding Sage through uv. Prefer
# a system Python so `uv venv --system-site-packages` inherits that installation.
# Override with `uv venv --python <path>` if Sage uses a non-default interpreter.
python-preference = "system"

[tool.pytest.ini_options]
addopts = "-q -rxXs"
python_files = "tests/test_*.py"
python_functions = "test_*"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
ignore = ["E741"]
